Body_Data, Draw class added

--- a/V2/Tracking_Angles/Tracking_Angles/Tracking_Angles.csproj
+++ b/V2/Tracking_Angles/Tracking_Angles/Tracking_Angles.csproj
@@ -67,8 +67,9 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="Body_Joints.cs" />
+    <Compile Include="Body_Data.cs" />
     <Compile Include="Camera_Events.cs" />
+    <Compile Include="Draw.cs" />
     <Compile Include="MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
