--- a/V2/Tracking_Angles/Tracking_Angles/Tracking_Angles.csproj
+++ b/V2/Tracking_Angles/Tracking_Angles/Tracking_Angles.csproj
@@ -67,9 +67,9 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="Body_Data.cs" />
+    <Compile Include="Extensions\Body_Data.cs" />
     <Compile Include="Camera_Events.cs" />
-    <Compile Include="Draw.cs" />
+    <Compile Include="Extensions\Draw.cs" />
     <Compile Include="MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
@@ -103,6 +103,7 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
